--- a/src/app/admin/paymentmethods/paymentmethods.component.html
+++ b/src/app/admin/paymentmethods/paymentmethods.component.html
@@ -56,8 +56,8 @@
         <div class="col-md-12 padding-0">
           <div class="col-md-4" [ngClass]="displayFieldCss(form, 'var_type_atm')">
             <mat-form-field>
-              <mat-select placeholder="Card Type" formControlName="var_type_atm"
-                (change)="ShowButton(var_type_atm.value)">
+              <mat-select placeholder="Card Type" formControlName="var_type_atm" #val
+                (change)="ShowButton(val.value)">
                 <mat-option style="font-size: 16px;" *ngFor="let card_get_datat of card_opeation"
                   [value]="card_get_datat.value">{{card_get_datat.viewValue}}</mat-option>
               </mat-select>
@@ -246,13 +246,24 @@
             </mat-error>
           </mat-form-field>
         </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" [ngClass]="displayFieldCss(form, 'nickname')">
+          <mat-form-field>
+            <input matInput placeholder="Nick Name" type="text" formControlName="nickname">
+            <mat-error *ngIf="form.controls.nickname.touched && form.controls.nickname.invalid">
+              <mat-error *ngIf="form.controls.country.errors.required">
+                Nick Name cannot be empty
+              </mat-error>
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <mat-slide-toggle  value="setautopay"  (change)="changed($event)">Enroll in Autopay<br><span> set as recurring payment method</span></mat-slide-toggle>
+        
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
           <button class="btn btn-rose btn-fill btn-wd add-payment" (click)="add(f)">Add</button>
         </div>
       </form>
-      <!-- <mat-slide-toggle name="default" [(ngModel)]=default (change)="changed()" class="py-toggle">Set as Defalt</mat-slide-toggle>
-      <mat-slide-toggle name="setautopay" [(ngModel)]=setautopay (change)="changed()">Enroll in Autopay</mat-slide-toggle> -->
-      <!-- <span>set as recurring payment method</span> -->
+      <!-- <mat-slide-toggle name="default" [(ngModel)]=default (change)="changed()" class="py-toggle">Set as Defalt</mat-slide-toggle> -->
+     
     </div>
   </div>
 </div>
