--- a/src/app/advance-search/advance-search.component.html
+++ b/src/app/advance-search/advance-search.component.html
@@ -1,7 +1,7 @@
 <app-loader></app-loader>
 
 <div class="container sh-advnce-search pt-10px">
-    <div class="card one header" id="myHeader">
+    <div class="card one" >
         <div class="card-header" data-background-color="red">
             <h2>Advanced Search</h2>
         </div>
@@ -93,7 +93,7 @@
             <i class="fa fa-exclamation-triangle"></i>
             <h3 class="text-center">No Record Found</h3>
         </div>
-        <div *ngIf="item != 0 " class="card-content">
+        <div  class="card-content">
             <div class="row">
                 <div class="col-md-12">
                     <h3 class="text-center srch-result">Search Results - {{length | number}} RFP Opportunities Found</h3>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="products-area sh-products-area">
-                <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12 sh-pg-container">
+                <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12 sh-pg-container header" id="myHeader">
                 <div class="col-lg-9 col-md-8 col-sm-9 col-xs-12 text-right">
                     <ul class="pagination" *ngIf="pager.pages && pager.pages.length">
                             <li [ngClass]="{hide:pager.currentPage === 1}">
