--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -11,76 +11,8 @@
               <h3 class="text-center">No Record Found</h3>
           </div>
 
-        <div class="col-sm-12" *ngIf="item != 0">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top sh-pg-container">
-
-      
-                <div class="col-lg-9 col-md-9 col-sm-6 col-xs-12 text-right">
-                  <ul class="  pagination" *ngIf="pager.pages && pager.pages.length">
-                      <li [ngClass]="{hide:pager.currentPage === 1}">
-                          <a (click)="onPaginateChange(1)" class="view-1s" class="btn btn-fill">
-                              <i class="fa fa-angle-double-left"></i>
-                          </a>
-                      </li>
-                      <li [ngClass]="{hide:pager.currentPage === 1}">
-                          <a (click)="onPaginateChange(pager.currentPage - 1)" class="view-1s" class="btn btn-fill">
-                              <i class="fa fa-angle-left"></i>
-                          </a>
-                      </li>
-                      <li [ngClass]="{hide:pager.currentPage <= 30}" >
-                          <a (click)="onPaginateChange(pager.currentPage - 30)">...</a>
-                      </li>
-                      <li *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
-                          <a (click)="onPaginateChange(page)" class="view-plan-details">{{page | number}}</a>
-                      </li>
-          
-                      <li [ngClass]="{hide:pager.currentPage === pager.totalPages}" *ngIf="(pager.startPage  + 3) <= pager.totalPages">
-                          <a (click)="onPaginateChange(pager.currentPage + 3)">...</a>
-                      </li>
-                      <li [ngClass]="{hide:pager.currentPage === pager.totalPages}"> <a>Of</a></li>
-                      <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
-                          <a (click)="onPaginateChange(pager.totalPages)" class="view-plan-details" type="Last">{{pager.totalPages
-                              | number}}</a>
-                      </li>
-                      <li *ngIf="pager.currentPage === pager.totalPages"> <a>Of</a></li>
-                      <li *ngIf="pager.currentPage === pager.totalPages">
-                          <a (click)="onPaginateChange(pager.totalPages)" class="view-plan-details" type="Last">{{pager.totalPages
-                              | number}}</a>
-                      </li>
-                      <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
-                          <a (click)="onPaginateChange(pager.currentPage + 1)" class="view-plan-details" class="btn bd-color"
-                              type="Next">
-                              <i class="fa fa-angle-right top-set"></i>
-                          </a>
-                      </li>
-                      <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
-                          <a (click)="onPaginateChange(pager.totalPages)" class="view-plan-details" class="btn bd-color"
-                              type="Next">
-                              <i class="fa fa-angle-double-right"></i>
-                          </a>
-                      </li>
-                  </ul>
-                </div>
-                  <div class="col-lg-3 col-md-3 col-sm-5 col-xs-12 prod-select-list sec-list sh-select-list"
-                      *ngIf="pager.pages && pager.pages.length">
-                      <label class="product-label" >Items per page:
-                      </label>
-                      <mat-form-field>
-          
-                          <mat-select class="width-sec" placeholder="" value="{{pageSize}}" (change)="page(pageSize)"
-                              value="pageSize" required [(ngModel)]="pageSize" name="pageSize">
-                              <mat-option value="10" selected="true">10</mat-option>
-                              <mat-option value="20">20 </mat-option>
-                              <mat-option value="35">35</mat-option>
-                              <mat-option value="50">50</mat-option>
-                          </mat-select>
-                      </mat-form-field>
-          
-          
-          
-                  </div>
-          
-              </div>
+        <div class="col-sm-12">
+            
           <div>
             <div class="col-sm-4 page-title" >
               <span>{{cat}}</span>
@@ -104,6 +36,75 @@
     
     
             </div>
+          </div>
+          <div id="MYHeader" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 header sh-pg-container">
+
+      
+            <div class="col-lg-9 col-md-9 col-sm-6 col-xs-12 text-right">
+              <ul class="  pagination" *ngIf="pager.pages && pager.pages.length">
+                  <li [ngClass]="{hide:pager.currentPage === 1}">
+                      <a (click)="onPaginateChange(1)" class="view-1s" class="btn btn-fill">
+                          <i class="fa fa-angle-double-left"></i>
+                      </a>
+                  </li>
+                  <li [ngClass]="{hide:pager.currentPage === 1}">
+                      <a (click)="onPaginateChange(pager.currentPage - 1)" class="view-1s" class="btn btn-fill">
+                          <i class="fa fa-angle-left"></i>
+                      </a>
+                  </li>
+                  <li [ngClass]="{hide:pager.currentPage <= 30}" >
+                      <a (click)="onPaginateChange(pager.currentPage - 30)">...</a>
+                  </li>
+                  <li *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+                      <a (click)="onPaginateChange(page)" class="view-plan-details">{{page | number}}</a>
+                  </li>
+      
+                  <li [ngClass]="{hide:pager.currentPage === pager.totalPages}" *ngIf="(pager.startPage  + 3) <= pager.totalPages">
+                      <a (click)="onPaginateChange(pager.currentPage + 3)">...</a>
+                  </li>
+                  <li [ngClass]="{hide:pager.currentPage === pager.totalPages}"> <a>Of</a></li>
+                  <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
+                      <a (click)="onPaginateChange(pager.totalPages)" class="view-plan-details" type="Last">{{pager.totalPages
+                          | number}}</a>
+                  </li>
+                  <li *ngIf="pager.currentPage === pager.totalPages"> <a>Of</a></li>
+                  <li *ngIf="pager.currentPage === pager.totalPages">
+                      <a (click)="onPaginateChange(pager.totalPages)" class="view-plan-details" type="Last">{{pager.totalPages
+                          | number}}</a>
+                  </li>
+                  <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
+                      <a (click)="onPaginateChange(pager.currentPage + 1)" class="view-plan-details" class="btn bd-color"
+                          type="Next">
+                          <i class="fa fa-angle-right top-set"></i>
+                      </a>
+                  </li>
+                  <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
+                      <a (click)="onPaginateChange(pager.totalPages)" class="view-plan-details" class="btn bd-color"
+                          type="Next">
+                          <i class="fa fa-angle-double-right"></i>
+                      </a>
+                  </li>
+              </ul>
+            </div>
+              <div class="col-lg-3 col-md-3 col-sm-5 col-xs-12 prod-select-list sec-list sh-select-list"
+                  *ngIf="pager.pages && pager.pages.length">
+                  <label class="product-label" >Items per page:
+                  </label>
+                  <mat-form-field>
+      
+                      <mat-select class="width-sec" placeholder="" value="{{pageSize}}" (change)="page(pageSize)"
+                          value="pageSize" required [(ngModel)]="pageSize" name="pageSize">
+                          <mat-option value="10" selected="true">10</mat-option>
+                          <mat-option value="20">20 </mat-option>
+                          <mat-option value="35">35</mat-option>
+                          <mat-option value="50">50</mat-option>
+                      </mat-select>
+                  </mat-form-field>
+      
+      
+      
+              </div>
+      
           </div>
           <div class="products-area sh-products-area">
              
