--- a/src/app/rfps/subcategory-rfp/subcategory-rfp.component.html
+++ b/src/app/rfps/subcategory-rfp/subcategory-rfp.component.html
@@ -23,6 +23,81 @@
                             <span *ngIf="item">No of RFPs: <b>{{item | number}}</b></span>
                         </div>
                     </div>
+                    <div id="MYHeader" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 header sh-pg-container">
+
+                        <!-- <mat-paginator #paginator
+                       [length]="length"
+                       [pageSize]="pageSize"
+                       [pageSizeOptions]="pageSizeOptions"
+                       (page)="pageEvent = $event; onPaginateChange($event)">
+        </mat-paginator> -->
+                        <div class="col-lg-9 col-md-9 col-sm-6 col-xs-12 text-right">
+                            <ul class=" pagination" *ngIf="pager.pages && pager.pages.length">
+                                <li [ngClass]="{hide:pager.currentPage === 1}">
+                                    <a (click)="subscribe_data(1)" class="view-1s" class="btn btn-fill">
+                                        <i class="fa fa-angle-double-left"></i>
+                                    </a>
+                                </li>
+                                <li [ngClass]="{hide:pager.currentPage === 1}">
+                                    <a (click)="setpage(pager.currentPage - 1)" class="view-1s" class="btn btn-fill">
+                                        <i class="fa fa-angle-left"></i>
+                                    </a>
+                                </li>
+                                <li [ngClass]="{hide:pager.currentPage <= 30}">
+                                    <a (click)="setpage(pager.currentPage - 30)">...</a>
+                                </li>
+                                <li *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+                                    <a (click)="setpage(page)" class="view-plan-details">{{page | number}}</a>
+                                </li>
+        
+                                <li [ngClass]="{hide:pager.currentPage === pager.totalPages}"
+                                    *ngIf="(pager.startPage  + 3) <= pager.totalPages">
+                                    <a (click)="setpage(pager.currentPage + 3)">...</a>
+                                </li>
+                                <li [ngClass]="{hide:pager.currentPage === pager.totalPages}"> <a>Of</a></li>
+                                <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
+                                    <a (click)="setpage(pager.totalPages)" class="view-plan-details" type="Last">{{pager.totalPages
+                                    | number}}</a>
+                                </li>
+                                <li *ngIf="pager.currentPage === pager.totalPages"> <a>Of</a></li>
+                                <li *ngIf="pager.currentPage === pager.totalPages">
+                                    <a (click)="setpage(pager.totalPages)" class="view-plan-details" type="Last">{{pager.totalPages
+                                    | number}}</a>
+                                </li>
+                                <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
+                                    <a (click)="setpage(pager.currentPage + 1)" class="view-plan-details" class="btn bd-color"
+                                        type="Next">
+                                        <i class="fa fa-angle-right top-set"></i>
+                                    </a>
+                                </li>
+                                <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
+                                    <a (click)="setpage(pager.totalPages)" class="view-plan-details" class="btn bd-color"
+                                        type="Next">
+                                        <i class="fa fa-angle-double-right"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-5 col-xs-12 prod-select-list sec-list sh-select-list"
+                            *ngIf="pager.pages && pager.pages.length">
+                            <label class="product-label">Items per page:
+                            </label>
+                            <mat-form-field>
+        
+                                <mat-select class="width-sec" placeholder="" value="{{pageSize}}" (change)="page(pageSize)"
+                                    value="pageSize" required [(ngModel)]="pageSize" name="pageSize">
+                                    <mat-option value="10" selected="true">10</mat-option>
+                                    <mat-option value="20">20 </mat-option>
+                                    <mat-option value="35">35</mat-option>
+                                    <mat-option value="50">50</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+        
+        
+        
+                        </div>
+        
+                    </div>
                     <div class="col-sm-12 text-center mg-top-100" *ngIf="item == 0 ">
                         <i class="fa fa-exclamation-triangle" style="font-size:35px;padding:15px 0 0;"></i>
                         <h3 class="text-center">No Record Found</h3>
