--- a/src/app/all/all-rfps/all-rfps.component.html
+++ b/src/app/all/all-rfps/all-rfps.component.html
@@ -20,7 +20,7 @@
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sh-pg-container header"  id="myHeader">
 
-            <div class="col-lg-9 col-md-8 col-sm-9 col-xs-12 text-right">
+            <div class="col-lg-9 col-md-8 col-sm-9 col-xs-12 text-right" *ngIf="item !=0">
               <ul class="pagination" *ngIf="pager.pages && pager.pages.length">
                 <li [ngClass]="{hide:pager.currentPage === 1}">
                   <a (click)="setPage(1)" class="view-1s" class="btn btn-fill">
@@ -77,7 +77,7 @@
               </mat-form-field>
             </div>
           </div>
-          <div class="products-area sh-products-area " >
+          <div class="products-area sh-products-area " *ngIf="item !=0">
             <div *ngFor="let rfp of record;let i=index" class="card">
               <div class="row">
                 <div class="col-sm-12">
