--- a/src/app/admin/profile/profile.component.html
+++ b/src/app/admin/profile/profile.component.html
@@ -310,7 +310,7 @@
                         <div *ngIf="!pkgsub">
                         </div>
                         <div class="form-group text-center">
-                            <button type="submit" class="update-30% btn btn-lrg btn-rose btn-fill btn-wd"
+                            <button type="submit" class=" profile-update btn btn-lrg btn-rose btn-fill btn-wd"
                                 (click)="onRegister()">Update</button>
                         </div>
                     </div>
