--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -105,7 +105,7 @@
 
           <li class="">
             <a routerLink="/find-rfp" routerLinkActive="Active">
-              <i class="fa fa-user-plus" aria-hidden="true"></i>Find RFPs
+              <i class="fab fa-searchengin"></i>Find RFPs
             </a>
           </li>
           <li class="" *ngIf="!subscribe">
