--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -3,14 +3,14 @@
 <div class="main-panel min_height_550px">
     <div class="main-content custom mt-10px" >
         <div class="col-sm-12">
-            <!-- <div>
-                <div class="rfp-back"> 
+            <div>
+                <!-- <div class="rfp-back"> 
                     <a (click)="back()"><i class="fa fa-chevron-left"></i> Back to Previous Page</a>
-                </div>
+                </div> -->
                 <h2 class="main-heading">Find RFPs</h2>
-            </div> -->
-            <div *ngIf="items">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top sh-pg-container" *ngIf="search == false">
+            </div>
+            <div>
+                    <div id="MYHeader" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 header  sh-pg-container" >
                         <div class="col-lg-9 col-md-8 col-sm-9 col-xs-12 text-right">
                             <ul class="pagination" *ngIf="pager.pages && pager.pages.length">
                                 <li [ngClass]="{hide:pager.currentPage === 1}">
