--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -33,7 +33,7 @@
         <div class="col-md-6 col-sm-6">
           <div class="form-group">
             <mat-form-field class="example-full-width">
-              <textarea matInput placeholder=" Message" formControlName="message"></textarea>
+              <textarea matInput placeholder=" Message." formControlName="message" required></textarea>
               <mat-error *ngIf="form.controls.message.valid == false"><strong>Message cannot be empty or invalid</strong></mat-error>
             </mat-form-field>
           </div>
