--- a/src/app/layouts/admin/superadmin.component.html
+++ b/src/app/layouts/admin/superadmin.component.html
@@ -26,9 +26,9 @@
                 <li><a routerLink="/admin-panel" >
                     <i class="fa fa-dashboard"></i>Dashboard</a>
                 </li> <li><a routerLink="/add-rfp" >
-                  <i class="fa fa-dashboard"></i>Add New RFP</a>
+                  <i class="fas fa-file-alt"></i>Add New RFP</a>
               </li><li><a routerLink="/log-detail" >
-                <i class="fa fa-dashboard"></i>Log Detail</a>
+                <i class="fas fa-info-circle"></i>Log Detail</a>
             </li>
                 <li><a routerLink="/">
                     <i class="fa fa-home"></i>Home</a>
