--- a/src/app/layouts/admin/superadmin.component.scss
+++ b/src/app/layouts/admin/superadmin.component.scss
@@ -12,7 +12,7 @@
 
 .user-sidebar ul li a {
     font-size: 20px;
-    color: #3b3b3b;
+    color: #707070;
     font-weight: 600;
     padding: 8px 5px;
     display: block
@@ -30,9 +30,7 @@
 }
 
 .user-sidebar ul li a:hover {
-    border-left: 5px solid #c00;
-    background-color: #252525;
-    color: #fff
+    color: #c00
 }
 
 
