--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -122,7 +122,7 @@
     </section>
     <section id="f-c">
       <div class="container container-wide">
-        <h2 class=" text-center">How we stack up against the Competition?</h2>
+        <h2 class=" text-center heading-h2">How we stack up against the Competition?</h2>
         <p class="text-center ">Unbeatable Pricing, One-Package-Includes-All, Every Feature/RFP Included Nationwide,
           <br />No Gimmicks, No Hidden Fees, Next generation Web, iOS & Android Mobile Apps.</p>
         <div class="com-table">
@@ -241,7 +241,7 @@
     </section>
     <section class="packages-holder ">
       <div class="container-fluid sh-pd-0-70 sh-pkg-holder">
-        <h3 class="heading text-center">Latest RFPs</h3>
+        <h2 class="heading-h2 text-center">Latest RFPs</h2>
         <ngx-carousel [inputs]="carouselTwo" class="carouselTwo sh-carousel-fix" data-interval="true">
           <ngx-item NgxCarouselItem *ngFor="let rfp of record">
             <div class="card">
@@ -307,7 +307,7 @@
     </section>
     <section class="interest-area sh m-top-minus-10">
       <div class="container">
-        <h3 class="text-center">Search By Area</h3>
+        <h2 class="text-center heading-h2">Search By Area</h2>
         <ngx-carousel [inputs]="carouselThree" class="s-areaCarousel">
           <ngx-item NgxCarouselItem>
             <button (click)="stateInfo('California')" type="button" class="btn-primary">
@@ -365,8 +365,8 @@
     <section class="how-rfp-help">
       <div class="container">
         <div class="row m-top-minus-35px" >
-          <h3 class="text-center">How RFPGurus helps your organization in bidding on Nationwide Government Contracts
-            the Smart Way? </h3>
+          <h2 class="text-center heading-h2">How RFPGurus helps your organization in bidding on Nationwide Government Contracts
+            the Smart Way? </h2>
           <p class="m-top-18px">Hundreds of Thousands RFPs. RFPGurus is the most comprehensive source of RFPs,
             RFI, RFQs, RFTs & RFBs with next generation Web
             & Platform Apps. We are RFP aggregator and provide RFP Data to vendors and businesses at the Federal, State, County,
@@ -946,7 +946,7 @@
     </section>
     <section class="home pw-solutions">
       <div class="container">
-        <h3 class="text-center">RFPGurus Portfolio - Your ONE STOP SHOP for ALL Government Bids</h3>
+        <h2 class="text-center heading-h2">RFPGurus Portfolio - Your ONE STOP SHOP for ALL Government Bids</h2>
         <p >RFPGurus is the most comprehensive source of
           RFPs/RFI/RFBs/RFTs/RFQs with a next generation Web & Platform for Nationwide
           RFP Data at the Federal, State, County, City, and Local levels
@@ -1012,7 +1012,7 @@
     </section>
     <section class="success-for-business">
       <div class="container">
-        <h2 class="text-center">
+        <h2 class="text-center ">
           <strong>Success</strong> for your Business</h2>
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
