--- a/src/app/what-we-do/what-we-do.component.html
+++ b/src/app/what-we-do/what-we-do.component.html
@@ -1,5 +1,5 @@
 <!-- <app-header></app-header> -->
-<section class="about-1">
+<section class="about-1 what-we-do">
   <div class="container">
     <div class="main-text">
       <p class="large"><strong>What We Do?</strong>
