--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="about-main">
-  <section class="about-1">
+  <section class="about-1 who-are-we">
     <div class="container">
       <div class="main-text">
         <p class="large"><strong>Who Are We?</strong>
