--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -187,7 +187,7 @@
 
                 <div id="section-pricing" class="text-center">
                     <div class="pricing-tenure-switcher center" data-container="#pricing-switch">
-                        <div class="col-sm-4">
+                        <div class="col-sm-4 padding-zero">
                             <mat-form-field class=" mg-0-auto yearly-mnthly">
                                 <mat-select [(ngModel)]="valuee">
                                     <mat-option value="PY">Yearly Subscription</mat-option>
